# src/swagger-output.json
@@ -7,10 +7,7 @@
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": [
-    "http",
-    "https"
-  ],
+  "schemes": ["http", "https"],
   "securityDefinitions": {
     "Bearer": {
       "type": "apiKey",
@@ -18,18 +15,12 @@
       "in": "header"
     }
   },
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
     "/registration/register": {
       "post": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "description": "Registrate a new user.",
         "parameters": [
           {
@@ -60,9 +51,7 @@
     },
     "/registration/login": {
       "post": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "description": "Login",
         "parameters": [
           {
@@ -90,9 +79,7 @@
     },
     "/registration/getnewtoken": {
       "get": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "description": "Get new JWT",
         "parameters": [
           {
@@ -110,9 +97,7 @@
     },
     "/registration/verify/{code}": {
       "get": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "description": "Verfy a new account",
         "parameters": [
           {
@@ -131,9 +116,7 @@
     },
     "/registration/resendVerificationEmail": {
       "post": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "description": "Verfy a new account",
         "parameters": [
           {
@@ -183,9 +166,7 @@
     },
     "/user/databyuserid/{userid}": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -222,9 +203,7 @@
     },
     "/user/getAll": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -255,9 +234,7 @@
     },
     "/user/getcommunitymembers/{communityId}": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -294,9 +271,7 @@
     },
     "/user/update": {
       "put": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -348,9 +323,7 @@
     },
     "/user/sendrequest": {
       "post": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -393,9 +366,7 @@
     },
     "/community/getbyid/{id}": {
       "get": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "Get Community by id",
         "parameters": [
           {
@@ -432,9 +403,7 @@
     },
     "/community/getbycode/{code}": {
       "get": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "Find Community by the invite code",
         "parameters": [
           {
@@ -471,9 +440,7 @@
     },
     "/community/requests": {
       "get": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "Get all requests to a community, only admin can do this",
         "parameters": [
           {
@@ -504,9 +471,7 @@
     },
     "/community/requests/{communityid}": {
       "get": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "",
         "parameters": [
           {
@@ -543,9 +508,7 @@
     },
     "/community/acceptrequest": {
       "post": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "",
         "parameters": [
           {
@@ -588,9 +551,7 @@
     },
     "/community/denyrequest": {
       "post": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "",
         "parameters": [
           {
@@ -633,9 +594,7 @@
     },
     "/community/create": {
       "post": {
-        "tags": [
-          "Community"
-        ],
+        "tags": ["Community"],
         "description": "",
         "parameters": [
           {
@@ -678,9 +637,7 @@
     },
     "/calendar/create": {
       "post": {
-        "tags": [
-          "Calendar Entry"
-        ],
+        "tags": ["Calendar Entry"],
         "description": "",
         "parameters": [
           {
@@ -741,9 +698,7 @@
     },
     "/calendar/delete/{id}": {
       "delete": {
-        "tags": [
-          "Calendar Entry"
-        ],
+        "tags": ["Calendar Entry"],
         "description": "",
         "parameters": [
           {
@@ -780,9 +735,7 @@
     },
     "/calendar/interval": {
       "post": {
-        "tags": [
-          "Calendar Entry"
-        ],
+        "tags": ["Calendar Entry"],
         "description": "",
         "parameters": [
           {
@@ -828,9 +781,7 @@
     },
     "/calendar/routine/modify": {
       "post": {
-        "tags": [
-          "Calendar Entry"
-        ],
+        "tags": ["Calendar Entry"],
         "description": "",
         "parameters": [
           {
@@ -888,9 +839,7 @@
     },
     "/calendar/routine/all": {
       "get": {
-        "tags": [
-          "Calendar Entry"
-        ],
+        "tags": ["Calendar Entry"],
         "description": "",
         "parameters": [
           {
@@ -921,9 +870,7 @@
     },
     "/shoppinglist/items/add": {
       "post": {
-        "tags": [
-          "Shopping List"
-        ],
+        "tags": ["Shopping List"],
         "description": "",
         "parameters": [
           {
@@ -966,9 +913,7 @@
     },
     "/shoppinglist/items/getopen": {
       "get": {
-        "tags": [
-          "Shopping List"
-        ],
+        "tags": ["Shopping List"],
         "description": "",
         "parameters": [
           {
@@ -999,9 +944,7 @@
     },
     "/shoppinglist/items/getdone": {
       "get": {
-        "tags": [
-          "Shopping List"
-        ],
+        "tags": ["Shopping List"],
         "description": "",
         "parameters": [
           {
@@ -1032,9 +975,7 @@
     },
     "/shoppinglist/items/update": {
       "put": {
-        "tags": [
-          "Shopping List"
-        ],
+        "tags": ["Shopping List"],
         "description": "",
         "parameters": [
           {
@@ -1083,9 +1024,7 @@
     },
     "/debt/create": {
       "post": {
-        "tags": [
-          "Debt"
-        ],
+        "tags": ["Debt"],
         "description": "",
         "parameters": [
           {
@@ -1137,9 +1076,7 @@
     },
     "/debt/mine": {
       "get": {
-        "tags": [
-          "Debt"
-        ],
+        "tags": ["Debt"],
         "description": "Endpoint to get all debts of a user.",
         "parameters": [
           {
@@ -1170,9 +1107,7 @@
     },
     "/debt/balance": {
       "get": {
-        "tags": [
-          "Debt"
-        ],
+        "tags": ["Debt"],
         "description": "",
         "parameters": [
           {
@@ -1203,9 +1138,7 @@
     },
     "/debt/single/{id}": {
       "get": {
-        "tags": [
-          "Debt"
-        ],
+        "tags": ["Debt"],
         "description": "",
         "parameters": [
           {
